--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "ai-infinite-craft",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "openai": "^5.10.1"
   }
